--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="main-container main-width" id="about">
+<div #aboutMe class="main-container main-width" id="about">
 
     @if (this.generalService.currentLanguage == 'de') {
         <h2>Über mich</h2>
