--- a/src/app/main-content/my-skills/my-skills.component.html
+++ b/src/app/main-content/my-skills/my-skills.component.html
@@ -1,4 +1,4 @@
-<div class="main-container main-width" id="skills">
+<div #mySkills class="main-container main-width" id="skills">
 
     <fieldset>
 
