--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -53,6 +53,9 @@ nav {
         z-index: 1;
         padding: 10px;
         margin: 20px auto;
+        @include bp.xs-max {
+            margin: 10px auto;
+        }
         @include bp.sm {
             width: 350px;
         }
@@ -139,6 +142,9 @@ h2 {
     color: rgba(255, 252, 243, 1);
     margin-bottom: 48px;
     font-size: 18px;
+    @include bp.xs-max {
+        margin-bottom: 28px;
+    }    
     @include bp.sm {
         margin-bottom: -12px;
     }
@@ -149,6 +155,9 @@ h2 {
     justify-content: flex-end;
     padding-bottom: 46px;
     gap: 47px;
+    @include bp.xs-max {
+        padding-bottom: 24px;
+    }
     >a >img {
         width: 30px;
     }
