changed mail address in navbar footer

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
                                 Say hi!
                             }
                         </h2>
-                        <div class="mail-container">anita.gasteiner&#64;posteo.de</div>
+                        <div class="mail-container">contact&#64;anita-gasteiner.at</div>
                     </div>
 
                     <div class="contact-images">
