translate service initialized

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -11,11 +11,11 @@
 
         <div class="text-container">
             @if (this.generalService.currentLanguage == 'de') {
-                <p>Ich bin Frontend-Entwicklerin in Wien und begeistere mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.</p> <!-- Dabei achte ich sehr auf Usability und Accessibility. -->
+                <p>Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.</p> <!-- Dabei achte ich auf Usability und Accessibility. -->
                 <p>Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developer.</p>
             }
             @if (this.generalService.currentLanguage == 'en') {
-                <p>I am a front-end developer based in Vienna, Austria. I&nbsp;enjoy helping designers and companies to bring their ideas into real life. </p>
+                <p>As a front-end developer, I&nbsp;enjoy helping designers and companies to bring their ideas into real life.</p> <!-- I pay close attention to usability and accessibility. -->
                 <p>If you think I&nbsp;would be a&nbsp;good match for your projects, contact me! I&nbsp;am looking forward to a&nbsp;job in a&nbsp;junior developer position.</p>
             }
             <div>
