--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -6,10 +6,13 @@
     @if (this.generalService.currentLanguage == 'en') {
         <h2>About me</h2>
     }
+    <button (click)="translateLanguageTo('en')">EN</button>
+    <button (click)="translateLanguageTo('de')">DE</button>
 
     <div class="content-container">
 
         <div class="text-container">
+            <p>{{ 'app.about.title' | translate }}</p>
             @if (this.generalService.currentLanguage == 'de') {
                 <p>Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.</p> <!-- Dabei achte ich auf Usability und Accessibility. -->
                 <p>Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developer.</p>
