ngx-translate about me section resolved

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,6 +4,10 @@
 
         <img src="../../../../assets/img/logo-ag.png" alt="">
         <div>
+            <div>
+                <button (click)="translateLanguageTo('en')">EN</button>
+                <button (click)="translateLanguageTo('de')">DE</button>
+            </div>
             <div class="language-container" (click)="switchLanguage()">
                 <img src="../../../../assets/img/world.png" alt="">
                 <div>{{languageSwitch}}</div>
