--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,59 +1,24 @@
 <div #aboutMe class="main-container main-width" id="about">
 
-    @if (this.generalService.currentLanguage == 'de') {
-        <h2>Über mich</h2>
-    }
-    @if (this.generalService.currentLanguage == 'en') {
-        <h2>About me</h2>
-    }
-    <button (click)="translateLanguageTo('en')">EN</button>
-    <button (click)="translateLanguageTo('de')">DE</button>
+    <h2>{{ 'app.about.title' | translate }}</h2>
 
     <div class="content-container">
 
         <div class="text-container">
-            <p>{{ 'app.about.title' | translate }}</p>
-            @if (this.generalService.currentLanguage == 'de') {
-                <p>Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.</p> <!-- Dabei achte ich auf Usability und Accessibility. -->
-                <p>Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developer.</p>
-            }
-            @if (this.generalService.currentLanguage == 'en') {
-                <p>As a front-end developer, I&nbsp;enjoy helping designers and companies to bring their ideas into real life.</p> <!-- I pay close attention to usability and accessibility. -->
-                <p>If you think I&nbsp;would be a&nbsp;good match for your projects, contact me! I&nbsp;am looking forward to a&nbsp;job in a&nbsp;junior developer position.</p>
-            }
+            <p [innerHTML]="'app.about.para-1' | translate"></p> <!-- Dabei achte ich sehr auf Usability und Accessibility. // I pay close attention to usability and accessibility. -->
+            <p [innerHTML]="'app.about.para-2' | translate"></p>
             <div>
                 <div>
                     <img src="./../../../assets/img/house.svg">
-                    <span>
-                        @if (this.generalService.currentLanguage == 'de') {
-                            Wohnhaft in Wien
-                        }
-                        @if (this.generalService.currentLanguage == 'en') {
-                            Based in Vienna
-                        }
-                    </span>
+                    <span>{{ 'app.about.base' | translate }}</span>
                 </div>
                 <div>
                     <img src="./../../../assets/img/laptop.svg">
-                    <span>
-                        @if (this.generalService.currentLanguage == 'de') {
-                            Gerne auch Telearbeit
-                        }
-                        @if (this.generalService.currentLanguage == 'en') {
-                            Open to work remotely
-                        }
-                    </span>
+                    <span>{{ 'app.about.remote' | translate }}</span>
                 </div>
             </div>
             <a href="#contact">
-                <div class="btn-contact">
-                    @if (this.generalService.currentLanguage == 'de') {
-                        Kontakt
-                    }
-                    @if (this.generalService.currentLanguage == 'en') {
-                        Contact
-                    }            
-                </div>
+                <div class="btn-contact">{{ 'app.about.btn-text' | translate }}</div>
             </a>
         </div>
     
