ngx-translate skills & portfolio main text

--- a/src/app/main-content/my-skills/my-skills.component.scss
+++ b/src/app/main-content/my-skills/my-skills.component.scss
@@ -37,6 +37,10 @@ a {
     color: rgba(0, 188, 143, 1);
 }
 
+.colortest {
+    color: rgba(0, 188, 143, 1);    
+}
+
 .skills-container {
     font-size: 16px;
     font-weight: 700;
