--- a/src/app/main-content/my-skills/my-skills.component.html
+++ b/src/app/main-content/my-skills/my-skills.component.html
@@ -26,13 +26,18 @@
         <div class="learn-container">
             <img src="./../../../assets/img/learn.svg">
             <div>
+                {{ 'app.skills.para-1' | translate }}<br>
+                <a href="#contact" [innerHTML]="'app.skills.link' | translate"></a>
+                {{ 'app.skills.para-2' | translate }}
+            </div>
+            <!-- <div>
                 @if (this.generalService.currentLanguage == 'de') {
                     Sie brauchen weitere Skills?<br><a href="#contact">Kontaktieren Sie mich.</a> Ich bin immer bereit zu lernen.
                 }
                 @if (this.generalService.currentLanguage == 'en') {
                     Don't see the skill you need?<br><a href="#contact">Contact&nbsp;me.</a> I'm always ready to learn.
                 }
-            </div>
+            </div> -->
         </div>
         
     </fieldset>
