--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
             <h1>Frontend<br>Developerin</h1>
         }
         @if (this.generalService.currentLanguage == 'en') {            
-            <h1 [ngClass]="'h1-english'">Frontend<br>Developer</h1>
+            <h1 [ngClass]="'h1-english'">Front-End<br>Developer</h1>
         }
 
         <div class="name-container">
